--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
+	<div class="navbar navbar-inverse"></div>
 <div class="container">
 	<h1>인덱스 페이지 입니다.</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis incidunt tempore velit et rem veritatis, deleniti voluptatibus. Nesciunt reprehenderit dolore aliquid eveniet harum, maxime, maiores recusandae vitae quas, quia minima!</p>
