--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div class="container">
 	<h1>인덱스 페이지 입니다.</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis incidunt tempore velit et rem veritatis, deleniti voluptatibus. Nesciunt reprehenderit dolore aliquid eveniet harum, maxime, maiores recusandae vitae quas, quia minima!</p>
+	<a href="game.html">game.html</a>
 </div>
 <script src="js/jquery-3.3.1.js"></script>
 <script>
